fix: Update golangci-lint-action parameters for v7

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,8 +42,8 @@ jobs:
         with:
           version: latest
           args: --timeout=5m
-          skip-pkg-cache: true
-          skip-build-cache: true
+          skip-cache: true
+          skip-save-cache: true
 
   build:
     name: Build
