fix: Add golangci-lint config and update action settings

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,9 +41,10 @@ jobs:
         uses: golangci/golangci-lint-action@v7
         with:
           version: v1.56.2
-          only-new-issues: true
-          install-mode: binary
           args: --timeout=5m
+          install-mode: binary
+          only-new-issues: false
+          working-directory: .
 
   build:
     name: Build
