--- a/.golangci.yml
+++ b/.golangci.yml
@@ -2,6 +2,7 @@ linters:
   disable-all: true
   enable:
     - gofmt
+    - golint
     - govet
     - errcheck
     - staticcheck
@@ -16,13 +17,13 @@ run:
   timeout: 5m
   tests: true
   skip-dirs:
-    - vendor/
+    - vendor
 
 issues:
   exclude-rules:
     - path: _test\.go
       linters:
-        - gosec
+        - errcheck
 
 linters-settings:
   gocyclo:
@@ -32,4 +33,7 @@ linters-settings:
       - G204 # Subprocess launched with variable
 
 service:
-  golangci-lint-version: latest 
+  golangci-lint-version: latest
+
+# The latest supported version
+version: "1.0.0" 
